make sidebar fully invisible when collapsed, improve layout, see https://github.com/phetsims/paper-land/issues/73

--- a/client/camera/CameraMain.css
+++ b/client/camera/CameraMain.css
@@ -88,6 +88,7 @@
   font-weight: 300;
   width: 0;
   height: 95vh;
+  padding-right: 10px;
   overflow-x: hidden;
   overflow-y: auto;
   z-index: 1;
